MB-50630 : Recreate lcb_Instance on CANT_VERIFY err during bucket ops

Similar scenario as discussed in MB-54699
(https://review.couchbase.org/c/eventing/+/183427) but with a different err
message during TLS handshake

Change-Id: If58fdedf00a7f3552dcb7941ed4cdeee2fa565de
Reviewed-on: https://review.couchbase.org/c/eventing/+/183428
Well-Formed: Restriction Checker
Tested-by: abhishekjindal <abhishek.jindal@couchbase.com>
Reviewed-by: CI Bot
Reviewed-by: <ankit.prabhu@couchbase.com>